clang/test/BSC/Negative/SafeZone/string_literal_borrow_safezone.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

// Test string literal borrow behavior in safe zone

safe void foo(const char *borrow str) {
}

safe void test_safe_function_param(void) {
  // Automatic &const * insertion in safe function
  foo("hello");
}

safe void test_safe_function_init(void) {
  // Automatic &const * insertion for variable initialization in safe function
  const char *borrow p = "hello";
}

void test_safe_block(void) {
  safe {
    // Automatic &const * insertion in safe block
    const char *borrow p = "hello";
    foo("world");
  }
}

// Test error: mutable borrow in safe function
safe void foo_mut(char *borrow str) {
}

safe void test_mut_borrow_error(void) {
  foo_mut("hello");  // expected-error {{cannot pass string literal to parameter of type 'char *borrow'; string literals are immutable}}
}

safe void test_mut_init_error(void) {
  char *borrow p = "hello";  // expected-error {{conversion from type 'char[6]' to 'char *borrow' is forbidden in the safe zone}}
}

void test_mut_borrow_in_safe_block(void) {
  safe {
    foo_mut("hello");  // expected-error {{cannot pass string literal to parameter of type 'char *borrow'; string literals are immutable}}
    char *borrow p = "hello";  // expected-error {{conversion from type 'char[6]' to 'char *borrow' is forbidden in the safe zone}}
  }
}

// Test error: direct &mut on string literal in safe zone
safe void test_direct_mut_error(void) {
  const char *borrow p = &mut "hello";  // expected-error {{cannot take mutable borrow of string literal with '&mut'; string literals are immutable}}
}

void test_direct_mut_in_safe_block(void) {
  safe {
    const char *borrow p = &mut "hello";  // expected-error {{cannot take mutable borrow of string literal with '&mut'; string literals are immutable}}
  }
}

// Test error: indirect &mut * on string literal in safe zone
safe void test_indirect_mut_error(void) {
  const char *borrow p = &mut * "hello";  // expected-error {{cannot take mutable borrow through string literal with '&mut *'; string literals are immutable}}
}

void test_indirect_mut_in_safe_block(void) {
  safe {
    const char *borrow p = &mut * "hello";  // expected-error {{cannot take mutable borrow through string literal with '&mut *'; string literals are immutable}}
  }
}

// Test mixed safe and unsafe contexts
void test_mixed_context(void) {
  // Outside safe zone - automatic conversion should still work
  const char *borrow p1 = "hello";

  safe {
    // Inside safe zone - automatic conversion should work
    const char *borrow p2 = "world";
    foo("test");
  }

  // Outside again - automatic conversion should work
  const char *borrow p3 = "end";
}

safe void test_nested_safe(void) {
  const char *borrow p1 = "outer";

  safe {
    const char *borrow p2 = "inner";
    foo("nested");
  }
}

// Test with const qualifiers
safe void test_const_variations(void) {
  const char *borrow p1 = "test1";
  const char * borrow p2 = "test2";
  const char* borrow p3 = "test3";
}

int main(void) {
  return 0;
}
